fixed align

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
 }
 
 .quotebox {
+    position: absolute;
     width: 500px;
     height: 500px;
     margin-top: 50px;
@@ -17,7 +18,15 @@ body {
     border-radius: 10px;
 }
 
+.quote{
+    margin-top: 25%;
+    font-size: 25px;
+}
+
 .button {
+    position: absolute;
+    width: 50px;
+    height: 15px;
     padding: 15px;
     left: 50%;
     text-align: center;
